# lliurex-quota-gui

./: CMakeLists.txt  Makefile  datamodel.cpp  datamodel.h  examples.cpp  examples.h  gui.pro  lliurex-quota.desktop  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  n4d.cpp  n4d.h  quotagui.pro  resources.qrc
debian/: changelog  control  copyright  install  postinst.ex  postrm.ex  preinst.ex  prerm.ex
rsrc/: CMakeLists.txt
translations/: quotagui_ca_ES.qm  quotagui_ca_ES.ts  quotagui_en.qm  quotagui_en.ts  quotagui_es_ES.qm  quotagui_es_ES.ts
